sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:2: error: Missing closing brace `}' assumed here
def solve() {
^DutchFlagAlgo:2: error: expected class or object definition
def solve() {
^